--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <div class="container">
       <header>
-        <img src="images/Rectangle 19 (1).png" alt="" />
+        <a href="index.html">
+          <img src="images/Rectangle 19 (1).png" alt="" />
+        </a>
         <nav>
           <ul>
             <li><a class="home" href="index.html">Home</a></li>
@@ -25,6 +27,104 @@
         </nav>
         <i class="fa-solid fa-cart-shopping"></i>
       </header>
+      <main>
+        <h2 class="main_title1">Contact Us</h2>
+        <form>
+          <div class="first_row">
+            <div>
+              <label for="fistname">FIRST NAME</label>
+              <input
+                type="text"
+                id="fistname"
+                name="NAME"
+                value=""
+                placeholder="First Name"
+              />
+            </div>
+            <div>
+              <label for="lastname">LAST NAME</label>
+              <input
+                type="text"
+                id="lastname"
+                name="LASTNAME"
+                value=""
+                placeholder="Last Name"
+              />
+            </div>
+          </div>
+          <div class="second_row">
+            <div>
+              <label for="age">AGE</label>
+              <input
+                type="number"
+                id="age"
+                name="AGE"
+                value=""
+                placeholder="Age"
+              />
+            </div>
+            <div>
+              <label for="email">EMAIL</label>
+              <input
+                type="email"
+                id="email"
+                name="EMAIL"
+                value=""
+                placeholder="Email"
+              />
+            </div>
+          </div>
+          <h2 class="main_title2">
+            The schedule of work you are interested in
+          </h2>
+          <div class="selector1">
+            <div class="radio1">
+              <label for="Full-time">Full Time</label>
+              <input type="radio" name="worktime" id="Full-time" />
+            </div>
+            <div class="radio1">
+              <label for="Part-time">Part-Time</label>
+              <input type="radio" name="worktime" id="Part-time" />
+            </div>
+            <div class="radio1">
+              <label for="Remote">Remote</label>
+              <input type="radio" name="worktime" id="Remote" />
+            </div>
+          </div>
+          <h2 class="main_title3">
+            Select the programming languages, you know
+          </h2>
+          <div class="selector2">
+            <div class="checkbox1">
+              <label for="angular">Angular</label>
+              <input type="checkbox" name="checkbox1" id="angular" />
+            </div>
+            <div class="checkbox1">
+              <label for="phyton">Phyton</label>
+              <input type="checkbox" name="checkbox2" id="phyton" />
+            </div>
+            <div class="checkbox1">
+              <label for="javascript">Javascript</label>
+              <input type="checkbox" name="checkbox3" id="javascript" />
+            </div>
+          </div>
+          <h2 class="main_title3">
+            Attach any supporting documents (resume, CV, cover letter, etc.)
+          </h2>
+          <div class="file">
+            <input type="file" />
+          </div>
+          <div class="buttons">
+            <button class="send_message" type="submit">SEND MESSAGE
+            </button>
+
+
+            <button class="reset" type="reset">RESET
+                 </button>
+          </div>
+        </form>
+      </main>
+      
     </div>
   </body>
 </html>
