--- a/index.html
+++ b/index.html
@@ -124,7 +124,14 @@
           </div>
         </form>
       </main>
-      
+      <footer>
+        <div class="footer_icons">
+        <i class="fa-brands fa-square-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-youtube"></i>
+    </div>
+      </footer>
     </div>
   </body>
 </html>
